[package]
name = "batchman"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["cross-platform", "programs", "install", "list", "batch"]
categories = ["command-line-utilities"]
description = "This CLI tool install programs in batch or serve as a list of such"
authors = ["Neosb <neosb@nuteksecurity.com>"]
readme = "README.md"
repository = "https://github.com/NutekSecurity/batchman/"

[dependencies]
